CHANGES
=======

v0.3.2
------

* Remove generator output

v0.3.0
------

* Make file name settings file relative

v0.2.5
------

* Removed dash from python directory name

v0.2.1
------

* Update link to generate script

v0.2.0
------

* Refactored to function as an installable package
* Fixes when creating custom modules. Fix comment line breaking. #26
* Fixes when creating custom modules. Fix comment line breaking
* Fix binding element name and handle canonical URI with version
* Fix error when parsing comment text
* fix parser for R4
* Add an option to avoid any download (#20)
* Changes required for Swift and FHIR 3.3.0 (#19)
* Fixes for recent fhir changes (#17)
* Update README
* pass isSummary and n\_min conflict to FHIRClass
* Remove starexpandtypes
* Add \`nonexpanded\_nonoptionals\`
* Allow to dump resource/class dependencies
* Allow to specify external classes without needing to copy a file
* Detect n\_min/isSummary conflict and warn
* Detect \`isSummary\`
* Fix unneccessary property omissal
* Also make \`unittest\_copyfiles\` use os.path.join()
* REFACTORING: remove language implementations
* Cleaner copy\_files phase
* Create models (resource target) directory (#14)
* [Swift3] Make FHIRAbstractBase CustomDebugStringConvertible
* [Python] extend mapping of keywords
* [Swift3] Allow re-use of \`readJSONFile()\` in tests
* Add -l switch to generate.py
* [Swift3] Enable \`swift test\`, fix missing copy phase
* [Swift3] Add FHIRURL convenience
* [Swift3] Replace buggy named tuples with struct
* [Swift3] Only inspect resourceType in FHIRAbstractResource
* [Swift3] Remove Resource.instantiate workaround
* [Swift3] More convenience
* [Swift3] Greatly improve JSON serialization
* [Swift3] Implement numeric primitives
* [Swift3] Add FHIRBool
* [Swift3] refactor how resources are populated; +FHIRURL
* [Swift3] More progress with primitives
* [Swift3] Check for missing properties when serializing
* [Swift3] Introducing FHIRString
* [Swift3] Fix to DateAndTimeParser