@@ -11,4 +11,4 @@ colorlog = ">=4.0.2"
 jinja2 = ">=2.10.3"
 markupsafe = ">=1.1.1"
 crefi = "*"
-logger = "*"
+logging = "*"
